<resources>
    <string name="app_name">Android布局实验</string>
    <string name="activity_linearlayout">线性布局</string>
    <string name="activity_constraintlayout">约束布局</string>
    <string name="activity_tablelayout">表格布局</string>
    <string name="TextView1">RED</string>
    <string name="TextView2">ORANGE</string>
    <string name="TextView3">YELLOW</string>
    <string name="TextView4">GREEN</string>
    <string name="TextView5">BLUE</string>
    <string name="TextView6">INDIGO</string>
    <string name="TextView7">VIOLET</string>
</resources>
