<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConstraintlayoutActivity">

    <TextView
        android:id="@+id/TextView1"
        android:text="@string/TextView1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="#f00"
        android:gravity="center"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"
        android:padding="25dp"></TextView>

    <TextView
        android:id="@+id/TextView2"
        android:text="@string/TextView2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="#ffa500"
        android:gravity="center"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"
        android:padding="25dp"></TextView>

    <TextView
        android:id="@+id/TextView3"
        android:text="@string/TextView3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="#ffff00"
        android:gravity="center"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="1"
        android:padding="25dp"></TextView>

    <TextView
        android:id="@+id/TextView4"
        android:text="@string/TextView4"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="#0f0"
        android:gravity="center"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintHorizontal_bias="0.15"
        android:padding="25dp"></TextView>

    <TextView
        android:id="@+id/TextView5"
        android:text="@string/TextView5"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="#00f"
        android:gravity="center"
        android:textColor="#fff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintHorizontal_bias="0.5"
        android:padding="25dp"></TextView>

    <TextView
        android:id="@+id/TextView6"
        android:text="@string/TextView6"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="#4b0082"
        android:gravity="center"
        android:textColor="#fff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintHorizontal_bias="0.85"
        android:padding="25dp"></TextView>

    <TextView
        android:id="@+id/TextView7"
        android:text="@string/TextView7"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:background="#ee82ee"
        android:gravity="center"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:padding="25dp"></TextView>

</androidx.constraintlayout.widget.ConstraintLayout>